# MiniSPICE

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  readme.md
3rd_lib/: install.sh  install_klu.sh  install_superlu.sh
include/: MiniSPICEMatrix.hpp  config.hpp  device.hpp  minispice.hpp
src/: CMakeLists.txt  minispice.cpp
src/analysis/: CMakeLists.txt  device.cpp  dojob.cpp  parser.cpp  setup.cpp
src/plot/: CMakeLists.txt  plot.cpp
src/solver/: CMakeLists.txt  MiniSPICEMatrix.cpp  solve.cpp
src/utils/: CMakeLists.txt  config.cpp
testcase/: readme.md
testcase/testcase1/: Netlist1.txt  readme.md
testcase/testcase2/: Netlist2.txt
testcase/testcase3/: Netlist3.txt
